<resources>
    <string name="app_name">KSPEU</string>
    <string name="fragment_login_vvedite_login">Введите логин</string>
    <string name="fragment_login_vvedite_parol">Введите пароль</string>
    <string name="fragment_login_vvoyti">Войти</string>
    <string name="fragment_login_vvhod_v_sistemu_kgeu">Вход в систему КГЭУ</string>
    <string name="created_by_act_1_21">Created by ACT-1-21</string>
    <string name="fragment_student_main_menu_my_room">Моя комната</string>
    <string name="fragment_student_main_menu_list_SSO">Список активистов ССО</string>
    <string name="fragment_student_main_menu_text">Главное меню</string>
    <string name="fragment_student_main_menu_FIO">Имя Фамилия Отчество</string>
    <string name="fragment_student_main_menu_inf_ob_obshage">Информация об общежитии, комнате</string>
    <string name="fragment_student_main_menu_search">Поиск</string>
    <string name="fragment_student_main_menu_search_button">Поиск</string>
    <string name="fragment_student_main_menu_balls_text">Баллы</string>
    <string name="fragment_student_main_menu_notifications_text">Уведомления</string>
    <string name="fragment_student_main_menu_acts_text">Акты</string>
    <string name="fragment_student_main_menu_create_request_text">Создать запрос</string>
    <string name="fragment_student_main_menu_logout_text">Выход</string>
    <string name="MyRoom">Моя комната</string>
    <string name="n_n_z">Фамилия Имя Отчество \nИнститут:\nГруппа: Z</string>
    <string name="student_my_room_button_text">Посмотреть график дежурств</string>
    <string name="student_my_room_information_about_room">Информация о комнате</string>
    <string name="students_points_view_prosmotr_ballov">Просмотр баллов</string>
    <string name="students_points_view_select_year_label">Выберите учебный год</string>
    <string name="students_points_view_add_achievement">Добавить достижения</string>
    <string name="students_points_view_quarter_1">Первый квартал</string>
    <string name="add_achievement_title">Добавить достижение</string>
    <string name="achievement_date_hint">Дата</string>
    <string name="achievement_description_hint">Описание</string>
    <string name="achievement_points_hint">Баллы</string>
    <string name="save_achievement_button">Сохранить</string>
    <string name="upload_document_button">Загрузить файл</string>
</resources>

